MYDELTARES-383: DSD: Export downloads does not produce correct CSV