@@ -59,7 +59,7 @@ public class LicenseManagerUtilsImpl extends HttpClientUtils implements LicenseM
             LOG.warn("Unable to generate license files as the LicenseManager is not active!");
             return Collections.emptyMap();
         }
-        if (user == null || user.isDefaultUser()) return Collections.emptyMap();
+        if (user == null || user.isGuestUser()) return Collections.emptyMap();
 
         String boundaryString = "----SignLicense";
         HashMap<String, String> headers = new HashMap<>();
@@ -106,16 +106,16 @@ public class LicenseManagerUtilsImpl extends HttpClientUtils implements LicenseM
             LOG.warn("Unable to generate license files as the LicenseManager is not active!");
             return Collections.emptyMap();
         }
-        if (user == null || user.isDefaultUser()) return Collections.emptyMap();
+        if (user == null || user.isGuestUser()) return Collections.emptyMap();
 
         HashMap<String, String> headers = new HashMap<>();
         headers.put("Content-Type", "application/x-www-form-urlencoded");
         headers.put("Authorization", "Bearer " + getAccessToken());
 
         String queryParameters = String.format("first_name=%s&last_name=%s&email=%s",
-                URLEncoder.encode(user.getFirstName(), StandardCharsets.UTF_8.name()),
-                URLEncoder.encode(user.getLastName(), StandardCharsets.UTF_8.name()),
-                URLEncoder.encode(user.getEmailAddress(), StandardCharsets.UTF_8.name()));
+                URLEncoder.encode(user.getFirstName(), StandardCharsets.UTF_8),
+                URLEncoder.encode(user.getLastName(), StandardCharsets.UTF_8),
+                URLEncoder.encode(user.getEmailAddress(), StandardCharsets.UTF_8));
         HttpURLConnection connection = getConnection(getBasePath() + licenseType + "?" + queryParameters, "GET", headers);
         checkResponse(connection);
 
